[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Skins.gd" type="Script" id=1]
[ext_resource path="res://Graphic/grass/Assety_-33.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Theme.tres" type="DynamicFont" id=3]
[ext_resource path="res://Graphic/pig/pig_wave__pig_wave_000.png" type="Texture" id=4]
[ext_resource path="res://Graphic/pig/pig_wave__pig_wave_2.png" type="Texture" id=5]
[ext_resource path="res://Graphic/pig/pig_wave__pig_wave_3.png" type="Texture" id=6]
[ext_resource path="res://Graphic/pig/pig_wave__pig_wave_4.png" type="Texture" id=7]
[ext_resource path="res://Graphic/Game over/Assety_-49.png" type="Texture" id=8]
[ext_resource path="res://Scenes/EffectsSound.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/BackgroundSound.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=15]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=20]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Skins" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
unlock_2 = 100
unlock_3 = 500
unlock_4 = 1500

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_top = 40.0
margin_right = 521.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="ScoreText" type="Label" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 275.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 1.06
custom_fonts/font = ExtResource( 3 )
text = "Best Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="BestScore" type="Label" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 279.0
margin_right = 309.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_top = 114.0
margin_right = 521.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="SumText" type="Label" parent="HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 275.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Sum Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="SumScore" type="Label" parent="HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 279.0
margin_right = 309.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="PigOne" type="Sprite" parent="." index="3"]

position = Vector2( 177.89, 436.238 )
texture = ExtResource( 4 )

[node name="PigOneButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_top = 534.0
margin_right = 321.0
margin_bottom = 602.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Active"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="PigTwo" type="Sprite" parent="." index="5"]

position = Vector2( 520.973, 436.238 )
texture = ExtResource( 5 )

[node name="PigTwoButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 377.0
margin_top = 527.0
margin_right = 662.0
margin_bottom = 595.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Fly 1000"
flat = true
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="PigThree" type="Sprite" parent="." index="7"]

position = Vector2( 184.706, 802.042 )
texture = ExtResource( 6 )

[node name="PigThreeButton" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 891.0
margin_right = 336.0
margin_bottom = 959.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Fly 1000"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="PigFour" type="Sprite" parent="." index="9"]

position = Vector2( 511.885, 790.681 )
texture = ExtResource( 7 )

[node name="PigFourButton" type="Button" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 397.0
margin_top = 881.0
margin_right = 652.0
margin_bottom = 949.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 20 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Fly 250"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="TextureButton" type="TextureButton" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 1156.0
margin_right = 265.0
margin_bottom = 1279.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="MenuTap" type="AudioStreamPlayer" parent="." index="12"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Effects"

[node name="EffectsSound" parent="." index="13" instance=ExtResource( 9 )]

position = Vector2( 600.018, 1172.39 )

[node name="BackgroundSound" parent="." index="14" instance=ExtResource( 10 )]

position = Vector2( 525.04, 1167.85 )

[connection signal="pressed" from="PigOneButton" to="." method="_on_PigOneButton_pressed"]

[connection signal="pressed" from="PigTwoButton" to="." method="_on_PigTwoButton_pressed"]

[connection signal="pressed" from="PigThreeButton" to="." method="_on_PigThreeButton_pressed"]

[connection signal="pressed" from="PigFourButton" to="." method="_on_PigFourButton_pressed"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


